# FileSystem

./: .gitmodules  CMakeLists.txt  FindCriterion.cmake  Makefile  README.md
.github/workflows/: ci.yml
include/fs/: defs.hpp  file.hpp  fs.hpp
src/: file.cpp  fs.cpp  helper.cpp  helper.hpp  test.cpp
test/: test.cpp
